[project]
name = "octobrowser"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.11",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.14"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff.format]
quote-style = "single"
